add service for tracking route name and change app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-dx8",
+  "name": "charlie-tran",
   "version": "0.0.0",
   "description": "Small description for portfolio-dx8 goes here",
   "license": "MIT",
