--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-createjs": "0.0.1",
     "ember-data": "^2.11.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "3.0.3",
